[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markpub-socials"
version = "1.0.5"
description = "Social network support for MarkPub websites"
authors = [
    {name = "William L. Anderson", email = "band@acm.org"}
]
license = {text = "MIT"}
readme = "README.md"
homepage = "https://github.com/band/markpub-socials" 
requires-python = ">=3.12"
dependencies = [
    "bs4 >= 0.0.2, < 0.0.3",
    "requests >= 2.32.3, < 3.0.0",
    "pyyaml >= 6.0.2, < 7.0.0",
    "python-dotenv >= 1.0.1, < 2.0.0"
]

[project.scripts]
markpub_bskypost = "markpub_socials.markpub_bskypost:main"

[project.optional-dependencies]
test = [
    "pytest",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/markpub_socials"]

[tool.ruff.lint]
ignore = [
    "E401",
    "E402",
]
